--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png);
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $white;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: $white;
   font-weight: bold;
 
   line-height: 1.7;
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: $white;
 }
 
 p {
