--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,9 @@ html {
 
 body {
 	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png);
+  background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
   font: 18px/1.4 $helvetica;
   color: $white;
 }
