--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $white;
+  color: #DDDDDD;
   font-weight: bold;
 
   line-height: 1.7;
@@ -64,7 +64,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $white;
+  color: #DDDDDD;
 }
 
 p {
