--- a/style.scss
+++ b/style.scss
@@ -18,10 +18,7 @@ html {
 }
 
 body {
-	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png);
-  background-size: 100% 100%;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png) 100% 100% no-repeat fixed;
   font: 18px/1.4 $helvetica;
   color: $white;
 }
