--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png) no-repeat fixed;
-	background-size: contain;
+	background-size: 100% 100%;
 	font: 18px/1.4 $helvetica;
   color: $white;
 }
@@ -281,7 +281,7 @@ nav {
 
 footer {
   padding: 20px 0;
-  text-align: center;
+  text-align: bottom;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
