--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: url(http://pre07.deviantart.net/b782/th/pre/f/2014/330/f/c/flat_pattern_quilts_wallpaper_3_by_microfreaks-d87ppad.png) no-repeat fixed;
+	background: url(http://cdn.wallpapersafari.com/17/29/hY8dsp.png) no-repeat fixed;
 	background-size: cover;
 	font: 18px/1.4 $helvetica;
   color: $white;
