New COLORS ALL OVER EUROPE

--- a/style.scss
+++ b/style.scss
@@ -70,11 +70,11 @@ p {
 }
 
 a {
-  color: $blue;
+  color: #CD5555;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: #CD5555;
   }
 }
 
@@ -123,12 +123,12 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+  color: #FFFFFF;
+  background: #FFFFFF;
 }
 ::selection {
-  color: $black;
-  background: $lightGray;
+  color: #FFFFFF;
+  background: #FFFFFF;
 }
 
 // Nicolas Gallagher's micro clearfix hack
@@ -157,7 +157,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid #FFFFFF;
 
   @include mobile {
     text-align: center;
@@ -226,7 +226,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: #FFFFFF;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -276,7 +276,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  background-color: #CD5555;
 }
 
 footer {
